# osm-is-area.rs

./: Cargo.toml  README.md
src/: lib.rs  osmisarea.rs  polygon_features.rs  relation.rs  way.rs
tests/: relation.rs  way.rs
