[package]
name = "osm-is-area"
description = "Is this OpenStreetMap element an area or not?"
version = "0.1.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okdistribute/osm-is-area.rs"
homepage = "https://github.com/okdistribute/osm-is-area.rs"
documentation = "https://docs.rs/osm-is-area/"
authors = ["okdistribute <633012+okdistribute@users.noreply.github.com>"]
edition = "2018"
keywords = ["osm", "openstreetmap", "area", "way", "map"]
exclude = [
  "*.pbf"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


